[package]
name = "actix1"
version = "0.1.0"
authors = ["Kangzhi Shi <shikangzhi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = "2"
actix-rt = "1.1"
actix-http = "1.0.1"
actix-web-actors = "2"
actix-files = "0.2.2"
log = "0.4.11"
env_logger = "0.7.1"